# foresight_ml

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.sec  Dockerfile.sec_xbrl  Makefile  README.md  SETUP.md  cleaned_requirements.txt  cloudbuild.sec_xbrl.yaml  cloudbuild.yaml  docker-compose.yml  dvc.yaml  mlflow.db  mypy.ini  optuna_results.json  pyproject.toml  requirements.txt
.dvc/: config
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd-api.yml  cd-dashboard.yml  cd-dev.yml  ci.yml  linting.yml  model_training.yml  pre-commit.yml  testing.yml  workflow_testing.yml  workflow_validation.yml
.streamlit/: config.toml
artifacts/models/: .gitignore  optuna_results.json
artifacts/splits/: scaler_pipeline.pkl
configs/model/: xgboost.yaml
data/: companies.csv
data/final/: .gitignore  final_v2.dvc
data/splits/: .gitignore
deployment/: .gcloudignore  cloudbuild.dashboard.yaml  cloudbuild.mlflow.yaml  cloudbuild.slack_adapter.yaml  cloudbuild.yaml
deployment/docker/: Dockerfile  Dockerfile.airflow  Dockerfile.api  Dockerfile.dashboard  Dockerfile.ingestion  Dockerfile.mlflow  Dockerfile.panel  Dockerfile.sec_xbrl  Dockerfile.slack_adapter  Dockerfile.train
deployment/slack_adapter/: app.py
docs/: CLEANING.md  COMPOSER_MIGRATION.md  PREPROCESSING.md
infra/: artifact_registry.tf  cloud_run.tf  composer.tf  dashboard_service.tf  foresight-airflow-export.yaml  iam.tf  mlflow.tf  monitoring.tf  outputs.tf  providers.tf  slack_adapter.tf  storage.tf  terraform.tfvars.example  variables.tf
infra/orchestration/: artifact_registry.tf  cloud_run.tf  composer.tf  iam.tf  providers.tf  storage.tf
infra/terraform/: bigquery.tf  composer.tf  iam.tf  outputs.tf  provider.tf  storage.tf  terraform.tfvars.example  variables.tf
monitoring/: data_drift.py  metrics.py  model_drift.py
notebooks/: model_experiments.ipynb
scripts/: check_terraform.sh  cloud_run_alert_smoke_test.sh  download_training_data.py  generate_companies_csv.py  mlflow_smoke_test.py
src/: __init__.py  main_labeling.py  main_panel.py  main_train.py
src/airflow/dags/: foresight_ml_data_pipeline.py  foresight_ml_preprocessing_pipeline.py  foresight_ml_training_pipeline.py
src/api/: dependencies.py  main.py  schemas.py
src/api/routers/: __init__.py  alerts.py  company.py  drift.py  health.py  predict.py
src/config/: settings.py
src/dashboard/: README.md  __init__.py  app.py  utils.py
src/dashboard/data/: __init__.py  api_client.py  gcs_loader.py
src/dashboard/pages/: company_risk.py  model_health.py  pipeline_status.py  watchlist.py
src/data/: __init__.py  cleaning.py  data_pipeline.py  preprocess.py  run_pipeline_local.py  split.py  validate_anomalies.py
src/data/cleaned/: data_cleaned.sql  quality_checks.sql
src/data/clients/: fred_client.py  sec_client.py  sec_xbrl_client.py
src/data/pipeline/: core.py
src/feature_engineering/: README.md  requirements.txt
src/feature_engineering/config/: settings.yaml
src/feature_engineering/data/: bias_report.md
src/feature_engineering/data/plots/: dashboard.html
src/feature_engineering/documentation/: implementation_plan.md
src/feature_engineering/pipelines/: __init__.py  bias_analysis.py  clean_engineered_features_bq.sql  data_cleaning.py  feature_engineering.py  feature_engineering_bq.sql  run_pipeline.py  visualizations.py
src/feature_store/: definitions.py  repo.py
src/ingestion/: __init__.py  fred_increment_job.py  fred_job.py  sec_job.py  sec_xbrl_increment_job.py  sec_xbrl_job.py
src/labeling/: distress.py
src/models/: __init__.py  evaluate.py  explain.py  inference_schema.py  manifest_io.py  manifest_schema.py  predict.py  registry.py  train.py
src/monitoring/: __init__.py  drift_monitor.py  retrain_trigger.py
src/panel/: builder.py
src/pipelines/: __init__.py  training_pipeline.py
src/utils/: __init__.py  gcs.py  logging.py  validation.py
tests/: conftest.py  test_cleaned.py  test_cleaning.py  test_dashboard.py  test_data.py  test_data_ingestion.py  test_data_splits.py  test_explain.py  test_inference_schema.py  test_manifest.py  test_model.py  test_pipeline.py  test_preprocess.py  test_registry.py  test_validation.py
tests/integration/: test_api_e2e.py  test_drift_monitor.py
tests/test_api/: test_alerts.py  test_health.py  test_logic.py  test_predict.py
tests/test_feature_engineering/: __init__.py  test_bias_analysis.py  test_feature_engineering.py
