[project]
name = "foresight-ml"
version = "0.1.0"
description = "Corporate Financial Distress Early Warning System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "pandas>=2.1.4",
    "pydantic>=2.5.3",
    "apache-airflow>=2.8.1",
    "apache-airflow-providers-google>=10.13.0",
    "google-cloud-storage>=2.14.0",
    "google-cloud-bigquery>=3.14.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.15",
    "mypy>=1.8.0",
    "types-requests>=2.31.0.20240125",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "ruff>=0.1.15",
    "mypy>=1.8.0",
    "types-requests>=2.31.0.20240125",
]

[tool.ruff]
line-length = 100
target-version = "py311"

select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

ignore = [
    "E501",  # Line too long (handled by formatter)
]

exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".mypy_cache",
    ".ruff_cache",
    "airflow/logs",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
force-single-line = false

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = true
follow_imports = "silent"

[[tool.mypy.overrides]]
module = "airflow.*"
ignore_missing_imports = true