[project]
name = "foresight-ml"
version = "0.1.0"
description = "Corporate Financial Distress Early Warning System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.33.0",
    "cryptography>=46.0.7",
    "pygments>=2.20.0",
    "pandas>=2.1.4",
    "pydantic>=2.5.3",
    "apache-airflow>=2.8.1",
    "apache-airflow-providers-google>=10.13.0",
    "google-cloud-storage>=2.14.0",
    "google-cloud-bigquery>=3.14.0",
    "gcsfs>=2024.10.0",
    "scikit-learn>=1.5.0",
    "imbalanced-learn>=0.12.0",
    "xgboost>=2.1.0",
    "optuna>=3.6.0",
    "mlflow>=3.11.1",
    "pyyaml>=6.0.1",
    "matplotlib>=3.9.0",
    "numpy>=2.4.2",
    "pyarrow>=15.0.0",
    "shap>=0.45.0",
    "streamlit>=1.35.0",
    "plotly>=5.22.0",
    "tabulate>=0.9.0",
    "ruff>=0.1.15",
    "mypy>=1.8.0",
    "types-requests>=2.31.0.20240125",
    "pytest>=9.0.2",
    "pre-commit>=4.5.1",
    "dvc>=3.66.1",
    "dvc-gs>=3.0.2",
    "fastapi>=0.117.1",
    "uvicorn>=0.40.0",
    "slowapi>=0.1.9",
    "litellm>=1.83.0",
    "evidently==0.4.36",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.1.15",
    "mypy>=1.8.0",
    "types-requests>=2.31.0.20240125",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "bandit>=1.8.0",
    "pip-audit>=2.7.0",
    "numpy>=2.4.2",
    "pandas>=2.1.4,<3.0.0",
    "gcsfs>=2024.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "D",   # pydocstyle (docstring rules)
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "D203",   # 1 blank line required before class docstring (conflicts with D211)
    "D213",   # multi-line docstring summary should start at second line (conflicts with D212)
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".mypy_cache",
    ".ruff_cache",
    "airflow/logs",
]

[tool.ruff.lint.isort]
force-single-line = false

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]
"src/feature_engineering/pipelines/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
ignore_missing_imports = true
follow_imports = "silent"

[[tool.mypy.overrides]]
module = "airflow.*"
ignore_missing_imports = true

[tool.uv]
constraint-dependencies = [
    "aiohttp>=3.13.4",  # Fix CVE-2026-34513 through CVE-2026-34525
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/dashboard/app.py",
    "src/dashboard/pages/model_health.py",
    "src/dashboard/pages/pipeline_status.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "raise NotImplementedError",
]
